# Crewai_hotel_booking_AI

./: .gitignore  README.md  app.py  crew.jsonc  crew_runner.py  pyproject.toml
agents/: booking_assistant.jsonc  hotel_search_specialist.jsonc  travel_consultant.jsonc
knowledge/: user_preference.txt
