[project]
name = "project_crewai"
version = "0.1.0"
description = "project_crewai using crewAI"
authors = [{ name = "Suraj Sah Kanu", email = "surajsah132@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]>=1.15.1,<2.0.0",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agents", "crew.jsonc", "tools", "knowledge", "skills"]

[tool.crewai]
type = "crew"
definition = "crew.jsonc"
